[package]
name = "reticulum-packet-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/erethon/reticulum-packet-rs"
readme = "README.org"
description = "Library to parse Reticulum packets"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
